# ChocoAPI

./: .dockerignore  .env.sample  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.sbt  docker-compose.yml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  local.yaml  production.yaml  testing.yaml
migrations/: 20220725213442_first_schema.down.sql  20220725213442_first_schema.up.sql  20220727222809_update_constraints.down.sql  20220727222809_update_constraints.up.sql
scripts/: init_db.sh
src/: configuration.rs  erro.rs  lib.rs  main.rs  models.rs  startup.rs  telemetry.rs  utils.rs
src/models/: mod.rs  user.rs  users.rs
src/repositories/: email_repository.rs  image_repository.rs  mod.rs  user_repository.rs
src/routes/: health_check.rs  mod.rs  register.rs
tests/api/: health_check.rs  helpers.rs  main.rs  register.rs  services.rs  wrappers.rs
